fixed scrollbar causing small gap on right

--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@ body {
 	margin: 0;
 }
 
-::-webkit-scrollbar {
+.pwrapper::-webkit-scrollbar {
 	width: 6px;
 }
  
-::-webkit-scrollbar-track {
+.pwrapper::-webkit-scrollbar-track {
 	border-radius: 10px;
 	background-color: transparent;
 }
  
-::-webkit-scrollbar-thumb {
+.pwrapper::-webkit-scrollbar-thumb {
 	background-color: rgba(255, 255, 255, 0.4);
 	border-radius: 10px;
 }
@@ -24,9 +24,7 @@ header {
 
 	padding: 10px 20px;
 	width: 100%;
-	position: fixed;
 	display: block;
-	z-index: 1;
 }
 
 #fade {
@@ -35,7 +33,7 @@ header {
 	top: 0; left: 0;
 	opacity: 0;
     background-color: black;
-	z-index: 2
+	z-index: 2;
 }
 
 #right {
